@@ -9,15 +9,22 @@ Estimates the relative proportion of pure cell types within a sample. For exampl
 	of lymphocytes, monocytes, B-cells, and neutrophils. 
 }
 \usage{
-estimateCellCounts(RGset, meanPlot = TRUE, cellType = "Blood", verbose = TRUE, \dots)
+estimateCellCounts(rgSet, compositeCellType = "Blood",
+                   cellTypes = c("CD8T","CD4T", "NK","Bcell","Mono","Gran"),
+                   returnAll = FALSE, meanPlot = FALSE, verbose = TRUE, \dots)
 }
 \arguments{
-  \item{RGset}{The input \code{RGChannelSet} for the procedure.}
+  \item{rgSet}{The input \code{RGChannelSet} for the procedure.}
   \item{meanPlot}{
 	Whether to plots the average DNA methylation across the cell-type discrimating probes within
 		the mixed and sorted samples. 
   }
-  \item{cellType}{Which cell type is being deconvoluted, see details.}
+  \item{compositeCellType}{Which composite cell type is being deconvoluted, see
+    details.}
+  \item{cellTypes}{Which celltypes, from the reference object, should be
+    we use for the deconvolution?}
+  \item{returnAll}{Should the composition table and the normalized user
+    supplied data be return?}
   \item{verbose}{Should the function be verbose?}
   \item{\dots}{Passed to \code{preprocessQuantile}.}
 }
@@ -41,7 +48,11 @@ batch effects.
 
 }
 \value{
-  Matrix of composition estimates across all samples and cell types
+  Matrix of composition estimates across all samples and cell types.
+
+  If \code{returnAll=TRUE} a list of a count matrix (see previous
+  paragraph), a composition table and the normalized user data in form
+  of a GenomicMethylSet.
 }
 
 \references{
@@ -64,3 +75,17 @@ Andrew E. Jaffe, E. Andres Houseman
 }
 
 \seealso{\code{\link{preprocessQuantile}}}
+
+\examples{
+if(require(FlowSorted.Blood.450k)) {
+  wh.WBC <- which(FlowSorted.Blood.450k$CellType == "WBC")
+  wh.PBMC <- which(FlowSorted.Blood.450k$CellType == "PBMC")
+  RGset <- FlowSorted.Blood.450k[, c(wh.WBC, wh.PBMC)]
+  ## The following line is purely to work around an issue with repeated
+  ## sampleNames and Biobase::combine()
+  sampleNames(RGset) <- paste(RGset$CellType,
+    c(seq(along = wh.WBC), seq(along = wh.PBMC)), sep = "_")
+  counts <- estimateCellCounts(RGset, meanPlot = FALSE)
+  round(counts, 2)
+}
+}
